# keras-digit-recogniser

./: .gitignore  Dockerfile  Pipfile  README.md  kaggle-digit-recogniser.ipynb  keras-digit-recogniser.ipynb  pyproject.toml
api/: main.py
app/: main.py  model.pkl
app/static/: main.js  style.css
app/templates/: drawing.html  home.html
data/: model.pkl
keras_digit_recogniser/: create_model.py  digit-recogniser.ipynb  dr_submission.csv  predict.py  train_model.py
model_logic/: keras-digit-recogniser.ipynb  predict.py  train_model.py
