[tool.poetry]
name = "keras-digit-recogniser"
version = "0.1.0"
description = ""
authors = ["Rebekka Haley <rebekka.haley@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "model_logic" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
keras = "^2.10.0"
numpy = "^1.23.2"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
tensorflow = "^2.10.0"
scikit-learn = "^1.1.2"
jupyter = "^1.0.0"
isort = "^5.10.1"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
