[tool.poetry]
name = "keras-digit-recogniser"
version = "0.1.0"
description = ""
authors = ["Rebekka Haley <rebekka.haley@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
keras = "^2.10.0"
numpy = "^1.23.2"
tensorflow = "^2.10.0"
scikit-learn = "^1.1.2"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.6.2"
pandas = "^1.5.2"
isort = "^5.10.1"
ipykernel = "^6.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
